--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dragão</title>
+    <title>Tigre</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1>Dragão</h1>
-        <img src="" alt="Dragx">
+        <h1>Tigre</h1>
+        <img src="" alt="Tiger">
     </header>
 </body>
 
