--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Tigre</h1>
-        <img src="" alt="Tiger">
+        <img src="tigre_Branco.jpg" alt="Tiger">
     </header>
 </body>
 
