--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="cabecalho">
         <h1>Tigre</h1>
         <img src="tigre_Branco.jpg" alt="Tiger">
     </header>
