--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <h1>Tigre</h1>
         <img src="tigre_Branco.jpg" alt="Tiger">
     </header>
+<section class="section1">
+    <h2>section 1</h2>
+</section>
+<section class="section2">
+    <h3>section 2</h3>
+</section>
+
 </body>
 
 </html>
