--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <img src="tigre_Branco.jpg" alt="Tiger">
     </header>
 <section class="section1">
-    <h2>section 1</h2>
+    <img src="" alt="">
+    <h2>Snow</h2>
 </section>
 <section class="section2">
-    <h3>section 2</h3>
+    <h3>Nevoa</h3>
 </section>
 
 </body>
