--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <img src="tigre_Branco.jpg" alt="Tiger">
     </header>
 <section class="section1">
-    <img src="" alt="">
+    <img src="tigre-branco-em-uma-rocha-no-zoologico-700-784672.jpg" alt="tyger">
     <h2>Snow</h2>
 </section>
 <section class="section2">
+<img src="" alt="">
     <h3>Nevoa</h3>
 </section>
 
