--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h2>Snow</h2>
 </section>
 <section class="section2">
-<img src="" alt="">
+<img src="white-bengal-tiger-nature_23-2151528352.avif" alt="t1ger">
     <h3>Nevoa</h3>
 </section>
 
