--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <h3>Nevoa</h3>
 </section>
 
-<footer>
-<img src="" alt="">
+<footer class="rodape">
+<img src="tigre-branco-capa.webp" alt="">
 <p>Tigre_Branco</p>
 </footer>
 
