--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 </section>
 
 <footer class="rodape">
-<img src="tigre-branco-capa.webp" alt="">
+<img src="tigre-branco-capa.webp" alt="t2ger">
+<a href="https://pt.wikipedia.org/wiki/Tigre-de-bengala">
 <p>Tigre_Branco</p>
+</a>
 </footer>
 
 </body>
