--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="cabecalho">
         <h1>Tigre</h1>
-        <img class="cabecalho-imagem"Tigre-de-bengala" alt="Tiger">
+        <img class="cabecalho-imagem"Tigre_Branco.jpg" alt="Tiger">
     </header>
 <section class="section1">
     <img src="tigre-branco-em-uma-rocha-no-zoologico-700-784672.jpg" alt="tyger">
